manifests/base/resources/temporary-contents/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6080"
    prometheus.io/scrape: "true"
  labels:
    app: temporary-contents
    chart: temporary-contents-1.3.14
    heritage: Helm
    release: temporary-contents
  name: temporary-contents
spec:
  ports:
  - name: temporary-contents
    port: 6080
    protocol: TCP
    targetPort: 6080
  selector:
    app: temporary-contents
    release: temporary-contents
  type: ClusterIP
---
