manifests/base/resources/temporary-contents/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://temporary-contents-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10m
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # Only set if origin is sent as header
      if ( $http_origin ) {
           set $origin $http_origin;
           set $Access_Control_Allow_Credentials "true";
           set $Access_Control_Allow_Methods "GET, HEAD, POST, PATCH, OPTIONS";
           set $Access_Control_Allow_Headers "DNT,Qlik-Web-Integration-ID,Qlik-CSRF-Token,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,Content-Location,Tus-Resumable,Upload-Length,Upload-Metadata,Upload-Offset";
           set $Access_Control_Max_Age "1728000";
           set $Access_Control_Expose_Headers "Qlik-CSRF-Token,Content-Location,Location,Upload-Length,Upload-Offset";
      }

      if ( $request_method = 'OPTIONS' ) {
          more_set_headers 'Access-Control-Allow-Origin: $origin';
          more_set_headers 'Access-Control-Allow-Credentials: $Access_Control_Allow_Credentials';
          more_set_headers 'Access-Control-Allow-Methods: $Access_Control_Allow_Methods';
          more_set_headers 'Access-Control-Allow-Headers: $Access_Control_Allow_Headers';
          more_set_headers 'Access-Control-Expose-Headers: $Access_Control_Expose_Headers';
          more_set_headers 'Access-Control-Max-Age: $Access_Control_Max_Age';
          more_set_headers 'Tus-Resumable: 1.0.0';
          more_set_headers 'Tus-Version: 1.0.0';
          more_set_headers 'Tus-Extension: creation';
          more_set_headers 'Content-Type: text/plain charset=UTF-8';
          more_set_headers 'Content-Length: 0';
          return 204;
      }

      more_set_headers 'Access-Control-Allow-Origin: $access_control_allow_origin';
      more_set_headers 'Vary: $vary';
      more_set_headers 'Access-Control-Allow-Credentials: $Access_Control_Allow_Credentials';
      more_set_headers 'Access-Control-Allow-Methods: $Access_Control_Allow_Methods';
      more_set_headers 'Access-Control-Allow-Headers: $Access_Control_Allow_Headers';
      more_set_headers 'Access-Control-Expose-Headers: $Access_Control_Expose_Headers';

      rewrite (?i)/api/(.*) /$1 break;
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "604800"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "604800"
    nginx.org/client-max-body-size: "0"
  labels:
    app: temporary-contents
    chart: temporary-contents-1.3.14
    heritage: Helm
    release: temporary-contents
  name: temporary-contents
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: temporary-contents
          servicePort: 6080
        path: /api/v1/temp-contents
---
